[Post][fix] break the longer sentences which is highlighted
Issue #5.
White-space's property replaced nowrap with pre-line.

--- a/_sass/_custom/custom.scss
+++ b/_sass/_custom/custom.scss
@@ -171,7 +171,7 @@
 // --------------------------------------------------
 .post-body .label {
   padding: 0 2px;
-  white-space: nowrap;
+  white-space: pre-line;
   border-radius: 2px;
   background-color: $label-default;
 
